--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 /.idea
 Homestead.json
 Homestead.yaml
+.env.*.php
+.env.php
 .env
-public/assets
+storage/*.key
+public/assets/**
+.believers-church/
 
